# from_scratch

./: .gitignore  Makefile  flake.nix  justfile
compiler_lints/: Cargo.toml
compiler_lints/src/: lib.rs
compiler_tests/: assert.viv  comparisons.viv  compiles.viv  compound_assignment.viv  control_flow.viv  if_statement.viv  math.viv  mod_error_handling.viv  type_narrowing.viv  vars.viv  while_loops.viv
compiler_tests/normal/: compiles.viv  compound_assignment.viv  functions.viv  math.viv  prefix.viv  range_syntax.viv  type_narrowing.viv  while_loops.viv
compiler_tests/xfail/functions/: argument_type.viv  cant_mut.viv  not_a_function_expr.viv  not_a_function_name.viv  too_little.viv  too_many.viv
compiler_tests/xfail/misc/: return_type.viv
compiler_tests/xfail/operators/: div_zero.viv  int_pow.viv  mod_zero.viv  wrong_type.viv
compiler_tests/xfail/type_narrow/: reassign.viv
compiler_tests/xfail/vars/: invalid_range.viv  not_in_scope.viv  not_mutable.viv
rust_compiler/: Cargo.toml  default_5026373777409856780_0_107044.profraw  default_6095734378264386988_0_113333.profraw  default_727452027013197571_0_107044.profraw  default_727452027013197571_0_110410.profraw  default_8915942755928377666_0_113333.profraw
rust_compiler/proptest-regressions/: lexer.txt
rust_compiler/src/: ast.rs  codegen.rs  error.rs  errors.rs  ir.rs  lexer.rs  main.rs  parser.rs  span.rs  type_system.rs
rust_compiler/src/type_system/: expressions.rs  mod.rs  scope.rs  statements.rs  types.rs
