[package]
name = "rust_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
lazy_static = "1.4.0"
nom = "7.1.3"
tempfile = "3.9.0"
uuid = { version = "1.7.0", features = ["v4"] }
maplit = "*"
thiserror = "1.0.57"
miette = { version = "7.1.0", features = ["fancy"] }
replace_with = "0.1.7"
wait-timeout = "0.2.0"

